correction ie11

--- a/style.css
+++ b/style.css
@@ -919,8 +919,6 @@ SECTION 4  Collection, text only, card  DEBUT
 .section7 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     padding: 94px 117px 72px 123px;
     max-width: 1440px;
     margin: auto;
@@ -1001,6 +999,7 @@ SECTION 4  Collection, text only, card  DEBUT
 .section7_text {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin: 0;
 }
 .section7_text h2 {
@@ -1038,8 +1037,6 @@ SECTION 4  Collection, text only, card  DEBUT
     .section7 {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
         padding: 72px 48px 76px 48px;
     }
     .section7_text {
@@ -1047,6 +1044,7 @@ SECTION 4  Collection, text only, card  DEBUT
     }
     .section7_cards {
         margin: 0px 0px 0px 0px;
+        justify-content: center;
     }
 }
 
@@ -1054,8 +1052,6 @@ SECTION 4  Collection, text only, card  DEBUT
     .section7 {
         display: flex;
         flex-direction: column-reverse;
-        justify-content: space-between;
-        align-items: center;
         padding: 48px 24px 48px 24px;
     }
     .section7_text {
